# crystalsystems

./: .pre-commit-config.yaml  LICENSE  README.md  codecov.yaml  environment.yml  pyproject.toml
.github/workflows/: actions.yml  cache_env.yml
src/: lattice.py  lstsq.py
src/crystalsystems/: __main__.py  cif.py  lattice.py  lstsq.py
tests/: test_cif.py  test_lattice.py  test_lstsq.py  test_main.py
