[project]
name = "crystalsystems"
description = "TODO"
dynamic = ["version"]
requires-python = ">=3.8"
dependencies = [
]

[build-system]
requires = [
  "setuptools >= 42",
  "versioningit"
]
build-backend = "setuptools.build_meta"

[tool.versioningit.vcs]
method = "git"
default-tag = "0.0.1"

[tool.setuptools.packages.find]
where = ["src"]

[tool.versioningit.write]
file = "src/imars3d/_version.py"

[tool.pylint]
max-line-length = 120
disable = ["too-many-statements",
           "too-many-instance-attributes",
           "too-many-arguments",
           "duplicate-code",
           "missing-module-docstring",
           "missing-function-docstring","missing-class-docstring"
]

[tool.pytest.ini_options]
pythonpath = [
  ".", "src", "scripts"
]
testpaths = ["tests"]
python_files = ["test*.py"]
norecursedirs = [".git", "tmp*", "_tmp*", "__pycache__", "*dataset*", "*data_set*"]
