[project]
name = "crystalsystems"
description = "TODO"
dynamic = ["version"]
requires-python = ">=3.8"
dependencies = [
]

[build-system]
requires = [
  "setuptools >= 42",
  "versioningit"
]
build-backend = "setuptools.build_meta"

[tool.versioningit.vcs]
method = "git"
default-tag = "0.0.1"

[tool.versioningit.next-version]
method = "minor"

[tool.setuptools.packages.find]
where = ["src"]

[tool.versioningit.write]
file = "src/crystalsystems/_version.py"

[tool.ruff]
line-length = 120
# https://beta.ruff.rs/docs/rules/
select = ["A", "ARG", "BLE", "E", "F", "I", "PT"]
ignore = []

[project.scripts]
crystalsystems = "crystalsystems.__main__:main"

[tool.pytest.ini_options]
pythonpath = [
  ".", "src", "scripts"
]
testpaths = ["tests"]
python_files = ["test*.py"]
norecursedirs = [".git", "tmp*", "_tmp*", "__pycache__", "*dataset*", "*data_set*"]
